--- a/src/TokenAuthExampleWebApplication/Properties/launchSettings.json
+++ b/src/TokenAuthExampleWebApplication/Properties/launchSettings.json
@@ -17,7 +17,7 @@
     "web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "http://localhost:5000/api/values",
+      "launchUrl": "http://localhost:5000/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
